# flighthunter-mcp

./: .gitignore  README.md  claude_config_example.json  fare_search.py  flighthunter-mcp  pyproject.toml  server.py
src/flighthunter/: __init__.py  fare_search.py  server.py
