[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flighthunter-mcp"
version = "1.0.0"
description = "MCP server for Claude — search cheap flights including Russian airlines with direct booking links"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "claude", "flights", "aviation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
]
dependencies = [
    "flights>=0.8.0",
    "httpx>=0.27.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Vetlinskiy/flighthunter-mcp"
Repository = "https://github.com/Vetlinskiy/flighthunter-mcp"

[project.scripts]
flighthunter-mcp = "flighthunter.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/flighthunter"]
